fixing whitespace bug on empty dark theme page

--- a/src/components/Doc.scss
+++ b/src/components/Doc.scss
@@ -5,6 +5,7 @@
   margin: 0 auto;
   padding: 2rem;
   padding-bottom: 60vh;
+  min-height: 100vh;
   &:focus {
     outline: none;
   }
